--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 **/node_modules/
 **/.env
 
-# Frontend-specific ignore rules
+# Frontend Logs
 /frontend/logs
 /frontend/*.log
 /frontend/npm-debug.log*
@@ -10,30 +10,22 @@
 /frontend/pnpm-debug.log*
 /frontend/lerna-debug.log*
 
-/frontend/node_modules
-/frontend/.DS_Store
+# Frontend Build output
 /frontend/dist
 /frontend/dist-ssr
-/frontend/coverage
 /frontend/*.local
 
-/frontend/cypress/videos/
-/frontend/cypress/screenshots/
-
-# Frontend editor directories and files
+# Frontend Editor directories and files
 /frontend/.vscode/*
 !/frontend/.vscode/extensions.json
 /frontend/.idea
+/frontend/.DS_Store
 /frontend/*.suo
 /frontend/*.ntvs*
 /frontend/*.njsproj
 /frontend/*.sln
 /frontend/*.sw?
 
-/frontend/*.tsbuildinfo
-
-/frontend/test-results/
-/frontend/playwright-report/
 
 # Backend-specific
 coverage
