--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
+    "@mui/material": "^6.0.0-beta.5",
     "@tanstack/react-query": "^5.51.23",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.3.1",
